MTX-368
* Added OpenTelemerty Spans to trace CriterionProcessor methods.
* Moved EmbeddedFilesResolver.java to the `parser` package.
* Added unit tests for the `EmbeddedFilesResolver` class.
* Cleaned code in `OsCommandHelper`.
* Fixed embedded files replacements in command lines.
* Moved HTTP classes under the `matsya` package.
* Added unit tests for the new code.